--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="icon" type="img/png" sizes="32x32" href="src/img/favicon-32x32.png">
 
-  <script defer src="src/js/controller.js" type="module"></script>
+  <script src="src/js/controller.js" type="module"></script>
 
   <title>Frontend Mentor | Time tracking dashboard</title>
 
